Fix history and score button alignment

--- a/static/scoreboard.css
+++ b/static/scoreboard.css
@@ -24,7 +24,7 @@
   position:relative;
   display:block;
   color: white;
-  height:42%;
+  height:48%;
   left:0px;
 }
 
@@ -163,11 +163,13 @@ div#scorebuttons {
     width:100%;
     display:flex;
     align-items:center;
-    margin-top:3%;
-    margin-bottom:3%;
+    margin-top:10px;
+    margin-bottom:10px;
+    position:relative;
 }
 
 div.scorenumbers {
+    margin-left:6%;
     flex-grow:1;
     flex-basis:0;
     display:none;
@@ -218,15 +220,18 @@ div#monsterbutton {
     background: url('/static/images/monster.svg');
     background-size:100%;
     background-position:50%;
-    border-repeat:none;
+    background-repeat:no-repeat;
+    position:absolute;
 }
 
 div.historyItem {
     width:100%;
     border:1px solid black;
-    border-radius:3px;
+    border-radius:7px;
     box-sizing:border-box;
     margin-bottom:2px;
+    padding-top:2px;
+    padding-bottom:2px;
 }
 
 div.historyItem.historyplayer {
